3/3.04/todos/manifests/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-backend-db-dep
spec:
  replicas: 1
  progressDeadlineSeconds: 120
  selector:
    matchLabels:
      app: todos-backend-db
  template:
    metadata:
      labels:
        app: todos-backend-db
    spec:
      containers:
        - name: todo-backend-db
          image: PROJECT/IMAGE_BACKEND
      volumes:
          - name: data-volume
            emptyDir: {}
