3/3.04/todos/manifests/service-response.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-response-db-svc
spec:
  #type: ClusterIP
  #type: NodePort
  type: LoadBalancer
  selector:
    app: todos-frontend-db
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
